# dactor

./: .gitignore  Cargo.toml  QA_REPORT.md  README.md  REVIEW_NA10_TRANSPORT_ROUTING.md  pr91-review-response.json  pr91-review.json
.github/workflows/: ci.yml
dactor/: Cargo.toml  README.md  build.rs
dactor-coerce/: Cargo.toml  README.md
dactor-coerce/docs/: implementation.md
dactor-coerce/src/: lib.rs  runtime.rs  system_actors.rs
dactor-coerce/tests/: adapter_tests.rs  corner_case_tests.rs  e2e_tests.rs  lifecycle_handle_tests.rs  native_system_actor_tests.rs  system_actor_tests.rs  transport_routing_tests.rs
dactor-discover-aws/: Cargo.toml  README.md
dactor-discover-aws/src/: lib.rs
dactor-discover-azure/: Cargo.toml  README.md
dactor-discover-azure/src/: lib.rs
dactor-discover-k8s/: Cargo.toml  README.md
dactor-discover-k8s/src/: lib.rs
dactor-kameo/: Cargo.toml  README.md
dactor-kameo/docs/: implementation.md
dactor-kameo/src/: cluster.rs  lib.rs  runtime.rs  system_actors.rs
dactor-kameo/tests/: adapter_tests.rs  e2e_tests.rs  lifecycle_handle_tests.rs  native_system_actor_tests.rs  system_actor_tests.rs  transport_routing_tests.rs
dactor-mock/: Cargo.toml  README.md
dactor-mock/docs/: implementation.md
dactor-mock/src/: cluster.rs  lib.rs  network.rs  node.rs
dactor-mock/tests/: mock_tests.rs
dactor-ractor/: Cargo.toml  README.md
dactor-ractor/docs/: implementation.md
dactor-ractor/src/: cluster.rs  lib.rs  runtime.rs  system_actors.rs
dactor-ractor/tests/: adapter_tests.rs  e2e_tests.rs  lifecycle_handle_tests.rs  native_system_actor_tests.rs  system_actor_tests.rs  transport_routing_tests.rs
dactor-test-harness/: Cargo.toml  README.md  build.rs
dactor-test-harness/proto/: test_node.proto
dactor-test-harness/src/: cluster.rs  handler.rs  lib.rs  node.rs
dactor/examples/: actor_pool.rs  basic_counter.rs  batch_streaming.rs  bounded_mailbox.rs  cancellation.rs  dead_letters.rs  error_handling.rs  event_sourcing.rs  interceptors.rs  metrics.rs  persistence.rs  rate_limiting.rs  readme_quickstart.rs  showcase.rs  streaming.rs  supervision.rs  task_queue.rs  task_queue_README.md
dactor/proto/: system.proto
dactor/src/: actor.rs  batched_transport.rs  broadcast.rs  circuit_breaker.rs  clock.rs  cluster.rs  dead_letter.rs  dispatch.rs  errors.rs  group.rs  interceptor.rs  lib.rs  mailbox.rs  message.rs  metrics.rs  node.rs  otel.rs  outbound_queue.rs  persistence.rs  pool.rs  proto.rs  registry.rs  remote.rs  remote_ref.rs  runtime_support.rs  stream.rs  supervision.rs  system_actors.rs  system_router.rs  throttle.rs  timer.rs  transport.rs  type_registry.rs  version.rs  virtual_pool.rs  wire_interceptor.rs  worker_ref.rs
dactor/src/test_support/: conformance.rs  mod.rs  test_clock.rs  test_runtime.rs  v2_test_runtime.rs
dactor/src/traits/: clock.rs  mod.rs  runtime.rs
dactor/src/types/: node.rs
dactor/tests/: persistence_integration_tests.rs  version_migration_tests.rs
docs/: RELEASING.md  adapter-plan.md  cluster-behavior.md  conversation.md  design-v0.2-review_1.md  design-v0.2-review_2.md  design-v0.2-review_3.md  design-v0.2-review_4.md  design-v0.2-review_5.md  design-v0.2-review_6.md  design-v0.2-reviews.md  design-v0.2.md  dev-plan.md  message-version-handler-playbook.md  progress.md  usage-guide.md  version-compatibility.md
