[package]
name = "dactor-coerce"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Coerce adapter for the dactor distributed actor framework"
authors = ["Yaming Liu <ymliu1978@gmail.com>"]
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"
homepage = "https://github.com/Yaming-Hub/dactor"
documentation = "https://docs.rs/dactor-coerce"
readme = "README.md"
keywords = ["actor", "distributed", "coerce", "framework", "runtime"]
categories = ["concurrency", "network-programming"]

[dependencies]
dactor = { version = "0.2.0", path = "../dactor", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
async-trait = "0.1"
tokio-util = "0.7"
tracing = "0.1"
coerce = "0.8"
futures = "0.3"
dactor-test-harness = { version = "0.2.0", path = "../dactor-test-harness", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }

[features]
test-harness = ["dep:dactor-test-harness", "dep:tracing-subscriber", "dep:serde_json"]

[dev-dependencies]
dactor = { version = "0.2.0", path = "../dactor", features = ["test-support"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
dactor-test-harness = { version = "0.2.0", path = "../dactor-test-harness" }

[[bin]]
name = "test-node-coerce"
path = "src/bin/test_node_coerce.rs"
required-features = ["test-harness"]
