[package]
name = "dactor-coerce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
description = "Coerce adapter for the dactor distributed actor framework"
documentation = "https://docs.rs/dactor-coerce"
readme = "README.md"
keywords = ["actor", "distributed", "coerce", "framework", "runtime"]

[dependencies]
dactor = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
async-trait.workspace = true
tokio-util.workspace = true
tracing.workspace = true
coerce = "0.8"
futures = "0.3"
dactor-test-harness = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
test-harness = ["dep:dactor-test-harness", "dep:tracing-subscriber", "dep:serde_json"]

[dev-dependencies]
dactor = { workspace = true, features = ["test-support"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json.workspace = true
dactor-test-harness.workspace = true

[[bin]]
name = "test-node-coerce"
path = "src/bin/test_node_coerce.rs"
required-features = ["test-harness"]
