[package]
name = "dactor-discover-aws"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "AWS node discovery for the dactor distributed actor framework"
authors = ["Yaming Liu <ymliu1978@gmail.com>"]
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"
homepage = "https://github.com/Yaming-Hub/dactor"
documentation = "https://docs.rs/dactor-discover-aws"
readme = "README.md"
keywords = ["actor", "distributed", "aws", "discovery", "cloud"]
categories = ["network-programming"]

[dependencies]
async-trait = "0.1"
dactor = { version = "0.3.1", path = "../dactor" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = "1"
aws-sdk-ec2 = "1"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
