[package]
name = "dactor-discover-aws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AWS node discovery for the dactor distributed actor framework"
documentation = "https://docs.rs/dactor-discover-aws"
readme = "README.md"
keywords = ["actor", "distributed", "aws", "discovery", "cloud"]
categories = ["network-programming"]

[dependencies]
async-trait.workspace = true
dactor.workspace = true
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = "1"
aws-sdk-ec2 = "1"
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
