[package]
name = "dactor-discover-azure"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Azure node discovery for the dactor distributed actor framework"
documentation = "https://docs.rs/dactor-discover-azure"
readme = "README.md"
keywords = ["actor", "distributed", "azure", "discovery", "cloud"]
categories = ["network-programming"]

[dependencies]
async-trait.workspace = true
dactor.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
