[package]
name = "dactor-discover-k8s"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Kubernetes node discovery for the dactor distributed actor framework"
documentation = "https://docs.rs/dactor-discover-k8s"
readme = "README.md"
keywords = ["actor", "distributed", "kubernetes", "discovery", "k8s"]
categories = ["network-programming"]

[dependencies]
async-trait.workspace = true
dactor.workspace = true
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
