[package]
name = "dactor-kameo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
description = "Kameo adapter for the dactor distributed actor framework"
documentation = "https://docs.rs/dactor-kameo"
readme = "README.md"
keywords = ["actor", "distributed", "kameo", "framework", "runtime"]

[dependencies]
dactor = { workspace = true, features = ["serde"] }
kameo = "0.19.2"
tokio = { workspace = true, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
async-trait.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
dactor-test-harness = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
test-harness = ["dep:dactor-test-harness", "dep:tracing-subscriber", "dep:serde_json"]

[dev-dependencies]
dactor = { workspace = true, features = ["serde", "test-support"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json.workspace = true
dactor-test-harness.workspace = true

[[bin]]
name = "test-node-kameo"
path = "src/bin/test_node_kameo.rs"
required-features = ["test-harness"]
