[package]
name = "dactor-mock"
version = "0.2.0"
edition = "2021"
description = "Mock multi-node cluster for testing dactor actor systems"
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"

[dependencies]
dactor = { version = "0.2.0", path = "../dactor", features = ["test-support"] }
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
