[package]
name = "dactor-mock"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Mock multi-node cluster for testing dactor actor systems"
authors = ["Yaming Liu <ymliu1978@gmail.com>"]
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"
homepage = "https://github.com/Yaming-Hub/dactor"
documentation = "https://docs.rs/dactor-mock"
readme = "README.md"
keywords = ["actor", "distributed", "mock", "testing", "framework"]
categories = ["concurrency", "development-tools::testing"]

[dependencies]
dactor = { version = "0.2.0", path = "../dactor", features = ["test-support"] }
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
