[package]
name = "dactor-mock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mock multi-node cluster for testing dactor actor systems"
documentation = "https://docs.rs/dactor-mock"
readme = "README.md"
keywords = ["actor", "distributed", "mock", "testing", "framework"]
categories = ["concurrency", "development-tools::testing"]

[dependencies]
dactor = { workspace = true, features = ["test-support"] }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
tokio-util.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
