[package]
name = "dactor-ractor"
version = "0.1.0"
edition = "2021"
description = "Ractor adapter for the dactor distributed actor framework"
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"
homepage = "https://github.com/Yaming-Hub/dactor"
readme = "README.md"
keywords = ["actor", "distributed", "ractor", "framework", "runtime"]
categories = ["concurrency", "network-programming"]

[dependencies]
dactor = { version = "0.1.0", path = "../dactor" }
ractor = "0.15"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
