[package]
name = "dactor-ractor"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Ractor adapter for the dactor distributed actor framework"
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"
homepage = "https://github.com/Yaming-Hub/dactor"
documentation = "https://docs.rs/dactor-ractor"
readme = "README.md"
keywords = ["actor", "distributed", "ractor", "framework", "runtime"]
categories = ["concurrency", "network-programming"]

[dependencies]
dactor = { version = "0.2.0", path = "../dactor", features = ["serde"] }
ractor = "0.15"
tokio = { version = "1", features = ["sync", "rt", "time", "macros", "rt-multi-thread"] }
async-trait = "0.1"
tokio-util = "0.7"
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
tracing = "0.1"

[dev-dependencies]
dactor = { version = "0.2.0", path = "../dactor", features = ["serde", "test-support"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
