[package]
name = "dactor-test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-process integration test harness for dactor actor framework"
documentation = "https://docs.rs/dactor-test-harness"
readme = "README.md"
keywords = ["actor", "distributed", "testing", "harness", "integration"]
categories = ["concurrency", "development-tools::testing"]

[dependencies]
dactor.workspace = true
tonic = "0.13"
prost.workspace = true
tokio = { version = "1", features = ["process", "sync", "rt", "rt-multi-thread", "time", "net", "macros", "io-util"] }
tokio-stream = { workspace = true, features = ["sync"] }
dashmap = "6"
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
