[package]
name = "dactor"
version = "0.2.0"
edition = "2021"
description = "An abstract framework for distributed actors in Rust"
license = "MIT"
repository = "https://github.com/Yaming-Hub/dactor"
homepage = "https://github.com/Yaming-Hub/dactor"
readme = "../README.md"
keywords = ["actor", "distributed", "framework", "async", "runtime"]
categories = ["concurrency", "network-programming"]

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tokio-stream = "0.1"
uuid = { version = "1.23.0", features = ["v4"] }

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[features]
default = []
serde = ["dep:serde"]
test-support = ["tokio/test-util"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[[example]]
name = "basic_counter"
required-features = ["test-support"]

[[example]]
name = "streaming"
required-features = ["test-support"]

[[example]]
name = "interceptors"
required-features = ["test-support"]

[[example]]
name = "supervision"
required-features = ["test-support"]

[[example]]
name = "bounded_mailbox"
required-features = ["test-support"]
